--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,11 +1,32 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <title>Upload</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="upload.css">
+        <title>Document</title>
     </head>
+    
+    <h3>Agri-Care</h3>
+
     <body>
+        <div>
+            <style>
+                body {
+                    background-image: url('bcg2.jpg');
+                    background-attachment: fixed;
+                    
+                    background-size: 100% 100%;
+                }
+            </style>
+        </div>
+
         <form method="POST" enctype="multipart/form-data" action="{{ url_for('upload') }}">
-            <input type=file name=photo> 
-            <input type="submit">
+            <input id='choose' type=file name=photo> 
+            <input id='submit' type="submit">
         </form>
+
+        
     </body>
 </html>
