--- a/templates/upload.html
+++ b/templates/upload.html
@@ -14,7 +14,7 @@
         <div>
             <style>
                 body {
-                    background-image: url('bcg2.jpg');
+                    background-image: url('bcg.jpg');
                     background-attachment: fixed;
                     
                     background-size: 100% 100%;
