--- a/templates/upload.html
+++ b/templates/upload.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="upload.css">
-        <title>Document</title>
+        <title>BASE-API-SeedClassification</title>
     </head>
     
     <h3>Agri-Care</h3>
