--- a/templates/upload.html
+++ b/templates/upload.html
@@ -8,7 +8,7 @@
         <title>BASE-API-SeedClassification</title>
     </head>
     
-    <h3>Agri-Care</h3>
+    <h3>Agri-Care(Base)</h3>
 
     <body>
         <div>
